Fixing CSS issues on mobile
background colors on main page and menu buttons on Spotify page

--- a/WebAppPortfolio/Content/Home.css
+++ b/WebAppPortfolio/Content/Home.css
@@ -18,6 +18,7 @@ body {
     height: 100%;
     font-family: 'Open Sans', sans-serif;
     color: white;
+    background-color: black;
 }
 
 h1, h2, h3, h4, h5, h6 {
